# dynfu

./: .gitignore  .gitlab-ci.yml  .lintflags  CMakeLists.txt  Dockerfile  README.md  setup.sh
apps/: demo.cpp
cmake/: CodeCoverage.cmake  FindOpenMesh.cmake  Targets.cmake
dynfu/: dyn_fusion.cpp  solver.cpp  warp_field.cpp
dynfu/utils/: frame.cpp  node.cpp
dynfusion/include/: solver.hpp  warp_field.hpp
dynfusion/src/: solver.cpp  warp_field.cpp
include/dynfu/: dyn_fusion.hpp  solver.hpp  warp_field.hpp
include/dynfu/utils/: ceres_solver.hpp  cost_functor.hpp  cuda_utils.h  dual_quaternion.hpp  frame.hpp  node.hpp  opt_solver.hpp  pointcloud_viz.hpp  solver.hpp
include/dynfu/utils/opt_solver/: opt_solver.h
include/dynfu/utils/opt_solver/opt/: CUDATimer.h  OpenMesh.h  Resource.h  mLibInclude.h  main.h
include/dynfu/utils/terra/: energy.t
include/kfusion/: exports.hpp  internal.hpp  kinfu.hpp  precomp.hpp  safe_call.hpp  types.hpp
include/kfusion/cuda/: device.hpp  device_memory.hpp  imgproc.hpp  marching_cubes.hpp  projective_icp.hpp  temp_utils.hpp  texture_binder.hpp  tsdf_volume.hpp
include/nanoflann/: nanoflann.hpp  pointcloud.hpp
kfusion/: CMakeLists.txt
kfusion/include/io/: capture.hpp
kfusion/include/kfusion/cuda/: device_array.hpp  kernel_containers.hpp  tsdf_volume.hpp
kfusion/src/: capture.cpp  core.cpp  device_memory.cpp  imgproc.cpp  kinfu.cpp  precomp.cpp  precomp.hpp  projective_icp.cpp  safe_call.hpp  tsdf_volume.cpp
kfusion/src/cuda/: device.hpp  temp_utils.hpp  texture_binder.hpp  tsdf_volume.cu
scripts/: .diff_format_bash  .diff_format_helper  .diff_tidy_bash  .diff_tidy_helper  .find_bash  .find_helper  .flags_bash  .flags_helper  .format_bash  .format_helper  gelp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  demo.cpp
src/dynfu/: CMakeLists.txt  dyn_fusion.cpp  node.cpp  solver.cpp  warp_field.cpp
src/dynfu/utils/: cost_functor.cpp  frame.cpp  node.cpp  opt_solver.cpp  pointcloud_viz.cpp  solver.cpp
src/kfusion/: CMakeLists.txt  core.cpp  kinfu.cpp  marching_cubes.cpp  precomp.cpp  tsdf_volume.cpp
src/kfusion/cuda/: imgproc.cu  marching_cubes.cu
src/kfusion/src/: device_memory.cpp  imgproc.cpp  kinfu.cpp
test/: CMakeLists.txt  ceres_optimisation_test.cpp  opt_optimisation_test.cpp  quaternion.cpp  quaternion_test.cpp  solver_test.cp  solver_test.cpp
test/dualQuaternion/: CMakeLists.txt  dualQuaternionTest.cpp  dualQuaternionTest.h
